# kali-companion

./: .gitignore  LICENSE  README.md
demos/stt_bilingual/: README.md  __init__.py  bilingual_stt.py  demo.py  record.py  requirements.txt
docker/: .env.example  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  AVATAR_EMOTIONS_PLAN.md  COMPONENTS.md  GAMES.md  GLOSSARY.md  I18N.md  PROJECT_PLAN.md  PROTOCOL.md  VISION.md
kali-core/: .env.example  pyproject.toml  sitio_canvas.html
kali-core/kali_core/: __init__.py  __main__.py  config.py  server.py  user_config.py
kali-core/tests/: test_artifact_streaming.py  test_emotion_filter.py  test_emotion_prompt.py  test_game_move_protocol.py  test_game_session_settings.py  test_nest.py  test_phase2_tools.py  test_phase3.py  test_phase4_game.py  test_planner_memory.py  test_profiles.py  test_runtime.py  test_server.py  test_stt.py  test_terminal_sessions.py  test_terminal_tool.py  test_tools.py  test_tts.py
kali-home/: Cargo.toml  build.rs  tauri.conf.json
kali-home/src/: commands.rs  ipc.rs  main.rs  sidecar.rs
kali-home/src/capture/: hyprland.rs  mod.rs  wayland.rs
kali-web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
kali-web/public/: manifest.webmanifest
kali-web/src/: App.tsx  (+2 more)
scripts/: check-i18n.mjs  dev.sh  download-stt-models.sh  download-voices.sh  prod.sh
ui-brainstorm/: assistant-in-center.html  aurora.html  index.html  kali-neural-canvas.html  lumen.html  nexus.html  serve.sh  slate.html  tidal.html
(+265 files in other folders)
