[package]
name = "kali-home"
version = "0.1.0"
edition = "2021"
description = "Kali shell — the native Tauri container that hosts the webview and the Python sidecar."
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tokio-tungstenite = "0.24"
futures-util = "0.3"
ashpd = "0.11"
urlencoding = "2"
base64 = "0.22"
webkit2gtk = "2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]